crates/toml_edit/tests/snapshots/invalid/key/without-value-01.stderr
TOML parse error at line 1, column 4
  |
1 | key
  |    ^
key with no value, expected `=`
